--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -8,6 +8,6 @@
     </block>
   </view>
   <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+    <text bindtap="bindbase64" class="user-motto">{{motto}}</text>
   </view>
 </view>
