--- a/pages/face/face.wxml
+++ b/pages/face/face.wxml
@@ -1,11 +1,16 @@
 <!--pages/face/face.wxml-->
 <view class="container">
-<view class="img_wrap">
-    <image src="{{ img }}" mode='aspectFit'/>
-</view>
-<button bindtap="uploads" class="up">拍照/选取图片识别</button>
+  <view class="img_wrap">
+    <image src="{{ img }}" mode='aspectFit' />
+  </view>
+  <button bindtap="uploads" class="up">拍照/选取图片识别</button>
+  <text class="user-beauty" wx:if="{{gender}}">性别:{{gender}}</text>
   <text class="user-age" wx:if="{{age}}">年龄:{{age}}</text>
-  <text class="user-beauty" wx:if="{{beauty}}">魅力值:{{beauty}}</text>
-  <text class="user-beauty" wx:if="{{expression}}">表情:{{expression}}</text>
+  <text class="user-beauty" wx:if="{{race}}">人种:{{race}}</text>
+  <text class="user-beauty" wx:if="{{face_shape}}">脸型:{{face_shape}}</text>
   <text class="user-beauty" wx:if="{{glasses}}">眼镜:{{glasses}}</text>
- </view>
+  <text class="user-beauty" wx:if="{{expression}}">表情:{{expression}}</text>
+  <text class="user-beauty" wx:if="{{beauty}}">魅力值:{{beauty}}</text>
+  <text class="user-beauty" wx:if="{{face_probability}}">人脸置信度:{{face_probability}}</text>
+  <text class="user-beauty" wx:if="{{face_type}}">真实人脸/卡通人脸:{{face_type}}</text>
+</view>
